# dbos-argus

./: .dockerignore  .gitignore  .replit  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.nix  turbo.json
.github/workflows/: ci-node.yml  ci-python.yml  dbos-schema-watch.yml  publish-images.yml  publish-pypi.yml  release.yml
apps/console/: .env.example  Dockerfile  components.json  package.json  playwright.config.ts  vite.config.ts
apps/console/e2e/: home.spec.ts
apps/console/scripts/: sync-theme.sh
apps/console/src/: app.css  app.d.ts  app.html  theme.css
apps/console/src/lib/: breadcrumb.svelte.ts  connection-diagnostics.test.ts  connection-diagnostics.ts  connection-state.svelte.ts  format.ts  index.test.ts  index.ts  stats.svelte.ts  workflow-status.ts  workflow-tree.ts
apps/console/src/lib/components/: DateRangePicker.svelte  EllipsisNode.svelte  GithubLink.svelte  JsonView.svelte  ResultPane.svelte  StepNode.svelte  WorkflowContainerNode.svelte  WorkflowFlow.svelte  WorkflowThroughputChart.svelte
apps/console/src/lib/components/ui/button/: button.svelte
apps/console/src/lib/components/ui/button-group/: button-group-text.svelte  button-group.svelte
apps/console/src/lib/components/ui/card/: card-footer.svelte  card-header.svelte  card.svelte
apps/console/src/lib/components/ui/checkbox/: checkbox.svelte
apps/console/src/lib/components/ui/dialog/: dialog-content.svelte
apps/console/src/lib/components/ui/input/: input.svelte
apps/console/src/lib/components/ui/input-group/: input-group-addon.svelte  input-group-button.svelte  input-group-textarea.svelte  input-group.svelte
apps/console/src/lib/components/ui/popover/: popover-content.svelte
apps/console/src/lib/components/ui/select/: select-content.svelte  select-item.svelte  select-trigger.svelte
apps/console/src/lib/components/ui/sheet/: sheet-content.svelte
apps/console/src/lib/components/ui/sidebar/: constants.ts  sidebar-inset.svelte  sidebar-menu-button.svelte
apps/console/src/lib/components/ui/table/: table-cell.svelte  table-head.svelte
apps/console/src/lib/components/ui/textarea/: textarea.svelte
apps/console/src/lib/components/ui/toggle/: toggle.svelte
apps/console/src/lib/components/ui/toggle-group/: toggle-group-item.svelte  toggle-group.svelte
apps/console/src/lib/realtime/: client.svelte.ts  client.test.ts  index.ts  protocol.ts  subscribe.svelte.ts
apps/console/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/console/src/routes/notifications/: +page.svelte
apps/console/src/routes/queues/: +page.svelte
apps/console/src/routes/schedules/: +page.svelte
apps/console/src/routes/workflows/: +page.svelte
apps/console/src/routes/workflows/[id]/: +page.svelte
docs/: architecture.md
examples/python-hello-workflow/: README.md  main.py  pyproject.toml
scripts/: build-pypi.sh  dbos_schema_bootstrap.py  dbos_schema_compare.py  demo-app.mjs  demo-entrypoint.sh  demo.mjs  dev.mjs  gen_protocol.py  replit-deploy.sh
tests/sample-app/: .env.example  README.md  _dbos_setup.py  heartbeat_runner.py  main.py  metrics_runner.py  ops.py  package.json  pyproject.toml  runner.py  scheduled.py  scheduler.py  simulator.py  workflows.py
tests/sample-app/workflows/: __init__.py  billing.py  campaigns.py  common.py  fulfillment.py  onboarding.py  reports.py  returns.py
