[project]
name = "dbos-argus-workspace"
version = "0.0.0"
description = "uv workspace root for dbos-argus"
requires-python = ">=3.12"
dependencies = [
  "dbos-argus",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "pydantic-to-typescript>=2.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
dbos-argus = { workspace = true }

[tool.uv.workspace]
# Examples are intentionally NOT workspace members — they have their own
# pyproject.toml and dependency set so third-party deps like `dbos` don't
# block `uv sync` at the root.
members = ["packages/server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"**/alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/server/tests"]
