[project]
name = "dbos-argus-workspace"
version = "0.0.0"
description = "uv workspace root for dbos-argus"
requires-python = ">=3.12"
dependencies = [
  "dbos-argus",
  "argus-sample-app",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "pydantic-to-typescript>=2.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
dbos-argus = { workspace = true }
argus-sample-app = { workspace = true }

[tool.uv.workspace]
members = ["packages/server", "tests/sample-app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/server/tests"]
