[project]
name = "argus-sample-app"
version = "0.0.1"
description = "Sample DBOS Transact app — dev fixture for the Argus dashboard."
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "dbos>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
argus-runner = "runner:main"
argus-ops = "ops:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["runner.py", "ops.py", "workflows.py", "scheduled.py", "_dbos_setup.py"]
