[project]
name = "argus-sample-app"
version = "0.0.1"
description = "Sample DBOS Transact app — dev fixture for the Argus dashboard."
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  # Argus tracks the latest DBOS schema (no backward compat). Floor bumped to
  # 2.27.0 to keep the fixture aligned with the schema snapshot; 2.27.0's new
  # debounce columns are recorded untracked (argus: false) and not read.
  "dbos>=2.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
argus-simulator = "simulator:main"
argus-runner = "runner:main"
argus-ops = "ops:cli"
argus-scheduler = "scheduler:main"
argus-metrics-runner = "metrics_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
  "simulator.py",
  "runner.py",
  "ops.py",
  "scheduled.py",
  "scheduler.py",
  "metrics_runner.py",
  "_dbos_setup.py",
  "workflows/**/*.py",
]
